# colcon-bundle

./: .dockerignore  .gitignore  .travis.yml  BUNDLE_FORMAT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Dockerfile.backwards  Dockerfile.dashing  Dockerfile.double  Dockerfile.foxy  Dockerfile.kinetic  Dockerfile.melodic  MANIFEST.in  NOTICE  README.md  requirements_devel.txt  run_integration_test.sh  run_ros2_integration_test.sh  setup.cfg  setup.py  stdeb.cfg  tox.ini
.github/: sendgrid.js
.github/actions/cw-build-status/: .eslintrc.json  README.md  action.yml  jest.config.js  package-lock.json  package.json  tsconfig.json
.github/actions/cw-build-status/__tests__/: unit.test.ts
.github/actions/cw-build-status/src/: cw-build-status.ts
.github/workflows/: nightly.yml  test.yml  test_bundle.repos  test_bundle.yml
colcon_bundle/: __init__.py
colcon_bundle/installer/: __init__.py  apt.py  base_pip_installer.py  pip.py  pip3.py
colcon_bundle/installer/assets/: apt_package_blacklist.txt  apt_package_skiplist.txt  bionic.sources.list  focal.sources.list  gazebo_blacklist.txt  sources.list  xenial.sources.list
colcon_bundle/task/: __init__.py
colcon_bundle/task/python/: bundle.py
colcon_bundle/verb/: __init__.py  _archive_generators.py  _dependency_utilities.py  _installer_manager.py  _overlay_utilities.py  _path_context.py  _utilities.py  bundle.py  bundlefile.py  bundlepath.py  pathcontext.py  utilities.py
colcon_bundle/verb/assets/: setup.sh  v1_setup.sh  v2_setup.bash  v2_setup.jinja2.sh  v2_setup.sh  v2_workspace_setup.bash  v2_workspace_setup.jinja2.sh  v2_workspace_setup.sh
integration/: copy-bundles.sh  test-bundle.sh  test_ros2_v2.bash  test_ros2_v2.sh  test_v1.sh  test_v2.bash  test_v2.sh
integration/robot_ws/src/garbage_collector/: CMakeLists.txt  package.xml
integration/robot_ws/src/garbage_collector/launch/: garbage_collector.launch
integration/robot_ws/src/garbage_collector/src/: garbage_collector.cpp
integration/ros2_workspace/src/test_cpp_package/: CMakeLists.txt  main.cpp  package.xml  post-script  pre-script
integration/ros2_workspace/src/test_cpp_package/launch/: test_cpp.launch
integration/ros2_workspace/src/test_py_module/: setup.py
integration/ros2_workspace/src/test_py_module/test_py_module/: run_annoy.py
integration/ros2_workspace/src/test_py_package/: package.xml  setup.cfg  setup.py
integration/ros2_workspace/src/test_py_package/test_py_package/: test.py
integration/test_workspace/: README.md  install-dependencies.sh  py27_requirements.txt  py3_requirements.txt
integration/test_workspace/src/test-catkin-cmake/: CMakeLists.txt
integration/test_workspace/src/test-catkin-cmake/src/: helloworld_cmake.cpp
integration/test_workspace/src/test-cmake/: CMakeLists.txt  hello.cpp  package.xml
integration/test_workspace/src/test-nodes/: CMakeLists.txt  package.xml
integration/test_workspace/src/test-nodes/launch/: helloworld.launch
integration/test_workspace/src/test-nodes/src/: helloworld.cpp  helloworld_dynamic.cpp  listener.cpp  talker.cpp
integration/test_workspace/src/test-pip-install/: CMakeLists.txt  package.xml
integration/test_workspace/src/test-pip-install/launch/: test.launch
integration/test_workspace/src/test-pip-install/src/: listener.py  talker.py  test-pip-install.py
integration/test_workspace/src/test-py-module/: setup.py
integration/test_workspace/src/test-py-module/test_py_module/: run_annoy.py
test/: test_bundlefile.py  test_flake8.py  test_pip3_installer.py  test_pip_installer.py  test_python_bundle.py  test_setup.py  test_utilities.py
test/assets/: parameterized_python_shebang.sh  python_shebang_expected.sh  regular_node_shebang.sh  regular_node_shebang_expected.sh  regular_python3_shebang.sh  regular_python3_shebang_expected.sh  regular_python_shebang.sh  regular_python_shebang_expected.sh  template_shebang.sh
test/assets/dummy_ws/opt/built_workspace/: local_setup.sh  local_setup_expected.sh
test/installer/: test_apt_installer.py  test_pip3_installer.py  test_pip_installer.py
test/verb/: test_dependency_analyzer.py  test_init.py  test_path_context.py
tests/: test_flake8.py  test_setup.py  test_utilities.py
tests/assets/: regular_python3_shebang.sh
