# Copyright 2018 Amazon.com, Inc. or its affiliates. All Rights Reserved.
# SPDX-License-Identifier: Apache-2.0

[metadata]
name = colcon-bundle
version = attr: colcon_bundle.__version__
author = Matthew Murphy
author_email = matmur@amazon.com
maintainer = Matthew Murphy
maintainer_email = matmur@amazon.com
classifiers =
  Development Status :: 3 - Alpha
  Environment :: Console
  Intended Audience :: Developers
  License :: OSI Approved :: Apache Software License
  Operating System :: MacOS
  Operating System :: Microsoft :: Windows
  Operating System :: POSIX
  Programming Language :: Python
  Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Plugin to bundle built software for the colcon command line tool
long_description = file: README.rst
keywords = colcon

[options]
python_requires = >=3.5
install_requires =
  colcon-core
  colcon-ros
  colcon-python-setup-py
  setuptools>=30.3.0
packages = find:
tests_require =
  pycodestyle==2.3.0
  flake8
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  mock
  pep8-naming
  pyenchant
  pylint
  pytest
  pytest-cov
zip_safe = true
include_package_data = true

[options.entry_points]
colcon_core.verb =
  bundle = colcon_bundle.verb.bundle:BundleVerb
colcon_bundle.installer =
  apt = colcon_bundle.installer.apt:AptBundleInstallerExtension
  pip3 = colcon_bundle.installer.pip3:Pip3BundleInstallerExtensionPoint
colcon_bundle.task.bundle =
  python = colcon_bundle.task.python.bundle:PythonBundleTask

[options.packages.find]
exclude =
  test
  test.*

[aliases]
test = pytest

[tool:pytest]
junit_suite_name = colcon-bundle

[flake8]
import-order-style = google











