# Copyright 2018 Amazon.com, Inc. or its affiliates. All Rights Reserved.
# SPDX-License-Identifier: Apache-2.0

[metadata]
name = colcon-bundle
version = attr: colcon_bundle.__version__
author = Matthew Murphy
author_email = matmur@amazon.com
maintainer = Matthew Murphy
maintainer_email = matmur@amazon.com
project_urls =
    Changelog = https://github.com/colcon/colcon-bundle/milestones?direction=desc&sort=due_date&state=closed
    GitHub = https://github.com/colcon/colcon-bundle/
classifiers =
  Development Status :: 3 - Alpha
  Environment :: Console
  Intended Audience :: Developers
  License :: OSI Approved :: Apache Software License
  Operating System :: MacOS
  Operating System :: Microsoft :: Windows
  Operating System :: POSIX
  Programming Language :: Python
  Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Plugin to bundle built software for the colcon command line tool
long_description = file: README.rst
keywords = colcon

[options]
python_requires = >=3.5
install_requires =
  colcon-core>=0.3.15
  colcon-bash>=0.4.2
  colcon-python-setup-py>=0.2.1
  jinja2>=2.9.0
  setuptools>=30.3.0
  distro>=1.2.0
packages = find:
tests_require =
  flake8
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pyenchant
  pylint
  pytest
  pytest-cov
  pytest-asyncio
zip_safe = true
include_package_data = true

[options.entry_points]
colcon_core.verb =
  bundle = colcon_bundle.verb.bundle:BundleVerb
colcon_bundle.installer =
  apt = colcon_bundle.installer.apt:AptBundleInstallerExtension
  pip = colcon_bundle.installer.pip3:Pip3BundleInstallerExtensionPoint
colcon_bundle.task.bundle =
  python = colcon_bundle.task.python.bundle:PythonBundleTask

[options.packages.find]
exclude =
  test
  test.*

[aliases]
test = pytest

[tool:pytest]
junit_suite_name = colcon-bundle

[flake8]
import-order-style = google
