<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>test_cpp_package</name>
  <version>0.7.3</version>
  <description>Examples of minimal nodes which have timers</description>
  <maintainer email="test@test.org">Test</maintainer>
  <license>Apache License 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

