<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>test_py_package</name>
    <version>0.7.3</version>
    <description>Test ament_python package</description>
    <maintainer email="test@test.org">Test</maintainer>
    <license>Apache License 2.0</license>
    <exec_depend>rclpy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
