<?xml version="1.0"?>
<package format="2">
  <name>test-cmake</name>
  <version>0.0.0</version>
  <description>Test Nodes Cmake</description>
  <maintainer email="matmur@amazon.com">matmur</maintainer>
  <license>TODO</license>
  <buildtool_depend>cmake</buildtool_depend>
  <depend>aws_cpp_sdk_monitoring</depend>
  <export>
  </export>
</package>
