<?xml version="1.0"?>
<package format="2">
  <name>test-pip-install</name>
  <version>0.0.0</version>
  <description>Test package that contains dependencies that must be installed via pip</description>
  <maintainer email="rmmeaghe@amazon.com">Robert Meagher</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>roslaunch</depend>
  <depend>std_msgs</depend>
  <depend>python-bitstring-pip</depend>
</package>
